added a form with two inputs

--- a/cost-calculator.html
+++ b/cost-calculator.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
+<!-- for the time being I want to keep both the css and js embedded -->
 <head>
 <title>Cost Calculator - Work out your monthly living costs</title>
 </head>
 <body>
 <h1>Cost Calculator</h1>
 <p>Add a cost item below and see the total at the bottom.</p>
+<form>
+<input type="text" id="add-item" name="add-item" value="" />
+<input type="text" id="add-cost" name="add-cost" value="" />
+<button>Add Item</button>
+<ul>
+<!-- new items will go here -->
+<ul>
+</form>
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> 
 </body>
 </html>
