added labels for the inputs

--- a/cost-calculator.html
+++ b/cost-calculator.html
@@ -7,7 +7,9 @@
 <h1>Cost Calculator</h1>
 <p>Add a cost item below and see the total at the bottom.</p>
 <form>
+<label for="add-item">Item</label>
 <input type="text" id="add-item" name="add-item" value="" />
+<label for="add-cost">Cost</label>
 <input type="text" id="add-cost" name="add-cost" value="" />
 <button>Add Item</button>
 <ul>
