--- a/cost-calculator.html
+++ b/cost-calculator.html
@@ -59,6 +59,15 @@ var $frequency = $('input[type="radio"]:checked');
 var yearlyTotal = 0;
 var multiplier = 12;
 var rowYearlyTotal = 0;
+// function to update the yearly totals
+function updateTotals(yearlyTotal) {
+	$('#yearly').find('td').last().html("&pound; " + yearlyTotal.toFixed(2));
+	$('#monthly').find('td').last().html("&pound; " + (yearlyTotal/12.0).toFixed(2));
+	$('#weekly').find('td').last().html("&pound; " + (yearlyTotal/52.0).toFixed(2));
+}
+// set totals to zero
+updateTotals(yearlyTotal);
+
 // update the value for newItem
 $addItem.keyup(function(){
 	newItem = $(this).val();
@@ -78,7 +87,7 @@ $('input[type="radio"]').on('click', function(){
 		multiplier = 1;
 	}
 });
-
+	
 // add a new row when the 'add item' button is clicked
 // adding a new row should update totals
 $('button').on('click', function() {
@@ -102,9 +111,7 @@ $('button').on('click', function() {
 
 	// add the amount to the yearly total
 	yearlyTotal += rowYearlyTotal;
-	$('#yearly').find('td').last().html("&pound; " + yearlyTotal.toFixed(2));
-	$('#monthly').find('td').last().html("&pound; " + (yearlyTotal/12.0).toFixed(2));
-	$('#weekly').find('td').last().html("&pound; " + (yearlyTotal/52.0).toFixed(2));
+	updateTotals(yearlyTotal);
 	return false;
 	}
 });
@@ -115,9 +122,7 @@ $('#cost-list').on('click', '.delete', function() {
 if (confirm('Are you sure?')){
 	yearlyTotal -= $(this).closest('tr').data('rowtotal');
 	$(this).closest('tr').remove();
-	$('#yearly').find('td').last().html("&pound; " + yearlyTotal.toFixed(2));
-	$('#monthly').find('td').last().html("&pound; " + (yearlyTotal/12.0).toFixed(2));
-	$('#weekly').find('td').last().html("&pound; " + (yearlyTotal/52.0).toFixed(2));
+	updateTotals(yearlyTotal);
 	}
 });
 });// end ready
