--- a/cost-calculator.html
+++ b/cost-calculator.html
@@ -103,6 +103,10 @@ $('input[type="radio"]').on('click', function(){
 		multiplier = 1;
 	}
 });
+// give focus to first input - add item
+function focusItem() {
+	$addItem.focus();
+}
 // update the row numbering 
 function updateRowNum() {
 	var $costRow = $('#cost-list').find('tbody tr');
@@ -116,6 +120,9 @@ function updateRowNum() {
 }
 // start by hiding the tables
 $('table').hide();
+
+// focus the first input
+focusItem();
 
 // add a new row when the 'add item' button is clicked
 // adding a new row should update totals
@@ -154,6 +161,7 @@ $('button').on('click', function() {
 	$addItem.val(empty);
 	newCost = empty;
 	newItem = empty;
+	focusItem();
 	return false;
 	}
 });
@@ -166,6 +174,7 @@ if (confirm('Are you sure?')){
 	$closestRow.remove();
 	updateTotals(yearlyTotal);
 	updateRowNum();
+	focusItem();
 	if ($('#cost-list').find('tr').length === 1) {
 		$('table').hide();
 		}
