updated the todo list

--- a/cost-calculator.html
+++ b/cost-calculator.html
@@ -31,6 +31,7 @@ li {list-style: none;}
 <li>Possibly add a quarterly total and quarterly radio button</li>
 <li>Change delete button to a cross icon</li>
 <li>Use local storage to save data</li>
+<li>Change confirm and alert for jquery modal dialog</li>
 </ul>
 </div><!-- end .show-help -->
 </div><!-- end #help -->
