--- a/cost-calculator.html
+++ b/cost-calculator.html
@@ -17,6 +17,7 @@ li {list-style: none;}
 .toggle-help:hover {color: #000;}
 .show-help {display: none; }
 </style>
+<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
 </head>
 <body>
 <div id="wrapper">
@@ -62,8 +63,13 @@ li {list-style: none;}
 <tr id="yearly"><td>Total Yearly Costs</td><td></td></tr>
 </tbody>
 </table>
+<div id="dialog-modal" title="Input fields empty">
+  <p>You need to fill in both of the fields.</p>
+</div>
+
 </div> <!-- end #wrapper -->
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> 
+<script type="text/javascript" src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 <script type="text/javascript">
 $(document).ready(function(){
 var newItem = ""; 
@@ -118,8 +124,9 @@ function updateRowNum() {
 		firstRow = firstRow.next();
 		}
 }
-// start by hiding the tables
+// start by hiding the tables and modal div
 $('table').hide();
+$('#dialog-modal').hide();
 
 // focus the first input
 focusItem();
@@ -139,7 +146,11 @@ $('button').on('click', function() {
 	// some error checking before appending the row
 	// if the either or both fields are empty
 	if (newCost === '' || newItem === '') {
-		alert('You need to fill in both the Cost and Item fields');
+		//alert('You need to fill in both the Cost and Item fields');
+		$('#dialog-modal').dialog({
+			height: 200,
+			modal: true
+		});
 		focusItem();
 		return false;
 	// if cost is not a number or a decimal
